# query-feishu-sheets

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.agents/skills/release-query-feishu-sheets/: SKILL.md
.agents/skills/release-query-feishu-sheets/agents/: openai.yaml
.agents/skills/release-query-feishu-sheets/scripts/: extract_release_notes.py  wait_for_workflow.ps1
.github/workflows/: build-skill.yml
plugin/feishu-codex-orchestrator/: .mcp.json
plugin/feishu-codex-orchestrator/.codex-plugin/: plugin.json
plugin/feishu-codex-orchestrator/scripts/: Configure-Lark-Bridge-Poc.ps1  Gateway-Status.ps1  Install-Gateway.ps1  Install-Lark-Bridge-Poc.ps1  Patch-Lark-Bridge-Poc.ps1  Run-Gateway.ps1  Uninstall-Gateway.ps1
scripts/: build.ps1  validate_plugin.py  validate_skill.py
skill/feishu-requirement-orchestrator/: SKILL.md
skill/feishu-requirement-orchestrator/agents/: openai.yaml
skill/feishu-requirement-orchestrator/references/: requirement-schema.md  result-schema.md  review-rubrics.md  workflow.md
skill/feishu-requirement-orchestrator/scripts/: branch_name.py  complexity_policy.py  publish_result.py  query_sheet.py  rank_requirements.py  review_gate.py  run_state.py
tests/: test_branch_name.py  test_complexity_policy.py  test_extract_release_notes.py  test_legacy_profile_draft.py  test_manual_requirement.py  test_profile_selector.py  test_publish_result.py  test_query_filter_policy.py  test_rank_requirements.py  test_review_gate.py  test_run_state.py  test_validate_plugin.py  test_validate_skill.py
(+40 files in other folders)
