[project]
name = "feishu-requirement-orchestrator"
version = "0.3.3"
description = "Build and validate the Feishu requirement orchestration Codex skill"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
  "tzdata>=2025.2",
]
